# hydra

./: .env  .envrc  .gitignore  COPYING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  clippy.toml  flake.nix
.githooks/: pre-commit
.github/workflows/: #build.yml#  build.yml  code-quality.yml  docker.yml  security-audit.yml  security.yml
assets/: style.css
src/: config.rs  db.rs  lib.rs  main.rs
src/pages/: error.rs  mod.rs  success.rs  teapot.rs
src/routes/: auth.rs  login.rs  mod.rs  refresh.rs  socket.rs
src/stages/: access_token.rs  bearer_token.rs  login_redirect.rs  mod.rs  player_info.rs  xbl_signin.rs  xsts_token.rs
src/templates/: messages.rs  mod.rs  pages.rs
templates/: auth_response.json  authorize_url  base.html  error.html  socket_error.json  success.html  xsts_body.json
templates/bodies/: bearer.json  xbl.json
templates/messages/: bearer.json  ratelimit_code.json
templates/pages/: base.html  error.html  success.html  teapot.html
tests/: flow.rs
workflows/: build.ncl  code-quality.ncl  security-audit.ncl
