[package]
name = "hydra"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.0"
directories = "4.0"
eyre = "0.6"
color-eyre = "0.5"
serde_json = "1.0"
sled = {version = "0.34", features = ["compression"]}
smol = "1.2"
url = "2.2"

log = "0.4"
pretty_env_logger = "0.4"

trillium = "0.2"
trillium-askama = "0.3"
trillium-client = "0.2"
trillium-head = "0.2"
trillium-router = "0.3"
trillium-rustls = "0.1"
trillium-smol = "0.2"

[dev-dependencies]
trillium-testing = {version = "0.4", features = ["smol"]}

[features]
tls = []
release = ["tls"]