[package]
name = "hydra"
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
actix-files="0.6.2"
actix-web = "4"
actix-ws = "0.2.5"
askama = "0.12.0"

tokio = { version = "1.25.0", features = ["sync"] }

dashmap = "5.3"
uuid = {version = "1.1", features = ["v5"]}
url = "2.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

eyre = "0.6"
color-eyre = "0.6.2"
log = "0.4"
pretty_env_logger = "0.4"

lazy_static = "1.4.0"

dotenvy = "0.15.6"

reqwest = { version = "0.11.14", features = ["json", "multipart"] }
